--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jrm2k6/cloudder": "^0.7.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "nao-pon/flysystem-google-drive": "~1.1",
         "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
